Fix RTL sidebar layout overlap

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -51,6 +51,32 @@ body {
   unicode-bidi: isolate;
 }
 
+@media (min-width: 50rem) {
+  .side-bar {
+    right: 0;
+    left: auto;
+    border-right: 0;
+    border-left: 1px solid #eeebee;
+  }
+
+  .side-bar + .main {
+    margin-right: 15.5rem;
+    margin-left: auto;
+  }
+
+  .site-footer {
+    right: 0;
+    left: auto;
+  }
+}
+
+@media (min-width: 66.5rem) {
+  .side-bar + .main {
+    margin-right: Max(16.5rem, calc((100% - 66.5rem) / 2 + 16.5rem));
+    margin-left: auto;
+  }
+}
+
 @media (max-width: 50rem) {
   .main-content {
     line-height: 1.75;
